--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@ts-rest/core": "^3.28.0",
     "@ts-rest/nest": "^3.28.0",
     "@ts-rest/open-api": "^3.28.0",
+    "bullmq": "^4.8.0",
+    "dotenv": "^16.3.1",
     "fastify": "^4.22.0",
     "nestjs-cls": "^3.5.0",
     "nestjs-pino": "^3.4.0",
@@ -40,6 +42,7 @@
     "pino-http": "^8.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "type-fest": "^4.3.1",
     "znv": "^0.3.2",
     "zod": "^3.22.2"
   },
