--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,15 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true,
   },
-  "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "[typescript]": {
+    "editor.formatOnPaste": false,
+    "editor.formatOnSave": false,
+  },
+  "[javascript]": {
+    "editor.formatOnPaste": false,
+    "editor.formatOnSave": false,
+  }
 }
